--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="container">
       <div class="one">
         <h1 class="one">
-          Xin chào bé
+          Xin chào Bé
           <span id="name">Giao</span>
         </h1>
         <p class="two" id="greetingText">Là anh chàng ngáo ngơ của em đây</p>
       </div>
       <div class="three">
-        <p>Hôm nay đã là Valentine rồi</p>
+        <p>Hôm nay là Valentine rồi</p>
       </div>
       <div class="four">
         <div class="text-box">
           <p class="hbd-chatbox">
-            Chúc mừng ngày Lễ tình nhân nhé bae. Chúc em bé của anh luôn vui vẻ,
+            Chúc mừng ngày Lễ tình nhân bae. Chúc em bé của anh luôn vui vẻ,
             hạnh phúc và mãi là cô bé đáng yêu của anh!
           </p>
           <p class="fake-btn">Gửi</p>
@@ -35,12 +35,12 @@
         <p class="idea-1">Cảm ơn em đã bên cạnh anh suốt thời gian qua</p>
         <p class="idea-2">Chúng ta đã bên nhau hơn 900 ngày</p>
         <p class="idea-3">
-          Anh muốn chúng ta sẽ cùng nhau trải qua từng ngày
+          Anh mong sau này chúng ta sẽ cùng nhau trải qua từng ngày
           <strong> thật hạnh phúc</strong>.
         </p>
         <p class="idea-4">Bởi vì,</p>
         <p class="idea-5">
-          Em là người con gái đẹp nhất
+          Em là người con gái xinh đẹp nhất
           <span>:)</span>
         </p>
         <p class="idea-6">
@@ -57,7 +57,7 @@
           id="imagePath"
         />
         <div class="wish">
-          <h3 class="wish-hbd">Happy Valentine's Day For You , Bae</h3>
+          <h3 class="wish-hbd">Happy Valentine's Day Bae</h3>
         </div>
       </div>
       <div class="seven">
